Setup Mantle Sepolia Testnet

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-VITE_INFO_GRAPH=https://api.studio.thegraph.com/query/50593/integral-core/version/latest
+VITE_INFO_GRAPH=https://subgraph-api.mantle.xyz/api/public/f077c8d4-0d6c-42d4-9bbd-050948dc5c86/subgraphs/swapsicle/analytics-testnet/prod/gn
 VITE_LIMIT_ORDERS_GRAPH=https://api.thegraph.com/subgraphs/name/iliaazhel/integral-limit-order
-VITE_BLOCKS_GRAPH=https://api.studio.thegraph.com/query/50593/goerli-blocks/version/latest
-VITE_FARMING_GRAPH=https://api.studio.thegraph.com/query/50593/farming-test/version/latest
-VITE_INFURA_RPC=https://ethereum-holesky-rpc.publicnode.com
+VITE_BLOCKS_GRAPH=https://subgraph-api.mantle.xyz/api/public/f077c8d4-0d6c-42d4-9bbd-050948dc5c86/subgraphs/swapsicle/blocks-testnet/prod/gn
+VITE_FARMING_GRAPH=https://subgraph-api.mantle.xyz/api/public/f077c8d4-0d6c-42d4-9bbd-050948dc5c86/subgraphs/swapsicle/farms-testnet/prod/gn
+VITE_INFURA_RPC=https://rpc.sepolia.mantle.xyz
 VITE_WALLETCONNECT_PROJECT_ID=79c313a96c99edbc26d06cd97bff1126
