Replace @cryptoalgebra/integral-sdk with swapsicledex/integral-sdk

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@cryptoalgebra/integral-sdk": ["./node_modules/swapsicledex/integral-sdk"],
     }
   },
   "include": ["src"],
