--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@radix-ui/react-switch": "^1.0.3",
         "@radix-ui/react-tabs": "^1.0.4",
         "@radix-ui/react-toast": "^1.1.5",
+        "@swapsicledex/integral-sdk": "0.12.6",
         "@tanstack/react-table": "^8.10.4",
         "@web3modal/wagmi": "^3.1.0",
         "class-variance-authority": "^0.7.0",
