Setup Telos Testnet

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-VITE_INFO_GRAPH=https://api.studio.thegraph.com/query/50593/integral-core/version/latest
+VITE_INFO_GRAPH=https://telosapi.0xgraph.xyz/api/public/f59149ee-c99a-41d0-afe4-1c86170a98b0/subgraphs/swapsicle/analytics-testnet/prod/gn
 VITE_LIMIT_ORDERS_GRAPH=https://api.thegraph.com/subgraphs/name/iliaazhel/integral-limit-order
-VITE_BLOCKS_GRAPH=https://api.studio.thegraph.com/query/50593/goerli-blocks/version/latest
-VITE_FARMING_GRAPH=https://api.studio.thegraph.com/query/50593/farming-test/version/latest
-VITE_INFURA_RPC=https://ethereum-holesky-rpc.publicnode.com
-VITE_WALLETCONNECT_PROJECT_ID=79c313a96c99edbc26d06cd97bff1126
+VITE_BLOCKS_GRAPH=https://telosapi.0xgraph.xyz/api/public/f59149ee-c99a-41d0-afe4-1c86170a98b0/subgraphs/swapsicle/blocks-testnet/prod/gn
+VITE_FARMING_GRAPH=https://telosapi.0xgraph.xyz/api/public/f59149ee-c99a-41d0-afe4-1c86170a98b0/subgraphs/swapsicle/farms-testnet/prod/gn
+VITE_INFURA_RPC=https://testnet.telos.net/evm
+VITE_WALLETCONNECT_PROJECT_ID=c8efec0c3a8a9ddbf47d6537f5df3ff5
