--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-VITE_INFO_GRAPH=https://api.studio.thegraph.com/query/50593/integral-core/version/latest
+VITE_INFO_GRAPH=https://telos.subgraph.swapsicle.io/subgraphs/name/cryptoalgebra/analytics
 VITE_LIMIT_ORDERS_GRAPH=https://api.thegraph.com/subgraphs/name/iliaazhel/integral-limit-order
-VITE_BLOCKS_GRAPH=https://api.studio.thegraph.com/query/50593/goerli-blocks/version/latest
-VITE_FARMING_GRAPH=https://api.studio.thegraph.com/query/50593/farming-test/version/latest
-VITE_INFURA_RPC=https://ethereum-holesky-rpc.publicnode.com
+VITE_BLOCKS_GRAPH=https://telos.subgraph.swapsicle.io/subgraphs/name/cryptoalgebra/blocks2
+VITE_FARMING_GRAPH=https://telos.subgraph.swapsicle.io/subgraphs/name/cryptoalgebra/farms2
+VITE_INFURA_RPC=https://mainnet15.telos.net/evm
 VITE_WALLETCONNECT_PROJECT_ID=79c313a96c99edbc26d06cd97bff1126
